duniverse/menhirLib.20200211/test/static/good/on-error-reduce-inlined.mly
%token A B
%start<unit> main
%on_error_reduce ioption(A)

%%

main:
  ioption(A) B {}
